--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
     ],
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "import/prefer-default-export": "off",
+        "import/named": "off"
     }
 }
